--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <button>Download for Mac</button>
       </div>
     </header>
+    <main>
     <section class="middle">
       <h2>Keep track of your snippets</h2>
       <p>Clipboard instantly stores any item you copy in the cloud, 
@@ -109,7 +110,7 @@
         </div>
     </section>
   </div>
-
+</main>
   <footer>
     <div>
       <img src="images/logo.svg" alt="logo"></div>
